--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-<p>Hi!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crypto Forecasts</title>
+    <style>
+        :root {
+            --primary-color: #2a2a2a;
+            --secondary-color: #4a90e2;
+            --background-color: #f5f5f5;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--background-color);
+            color: var(--primary-color);
+        }
+
+        header {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #333;
+            padding: 1rem;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: var(--secondary-color);
+        }
+
+        main {
+            max-width: 1200px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .card-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+            padding: 1rem;
+        }
+
+        .card {
+            background: white;
+            border-radius: 8px;
+            padding: 1.5rem;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .card h2 {
+            margin-top: 0;
+            color: var(--secondary-color);
+        }
+
+        footer {
+            background-color: var(--primary-color);
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+            
+            .card-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Crypto Forecasts</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="crypto.html">Crypto Overview</a></li>
+            <li><a href="forecast.html">Forecasts</a></li>
+            <li><a href="AVAX/index.html">AVAX</a></li>
+            <li><a href="BNB/index.html">BNB</a></li>
+            <li><a href="BTC/index.html">BTC</a></li>
+            <li><a href="ETH/index.html">ETH</a></li>
+            <li><a href="SOL/index.html">SOL</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <div class="card-grid">
+            <div class="card">
+                <h2>AVAX</h2>
+                <p>Latest Avalanche forecasts and analysis.</p>
+                <a href="AVAX/index.html">View Details</a>
+            </div>
+            <div class="card">
+                <h2>BNB</h2>
+                <p>Binance Coin market predictions.</p>
+                <a href="BNB/index.html">View Details</a>
+            </div>
+            <div class="card">
+                <h2>BTC</h2>
+                <p>Bitcoin forecast metrics and trends.</p>
+                <a href="BTC/index.html">View Details</a>
+            </div>
+            <div class="card">
+                <h2>ETH</h2>
+                <p>Ethereum market analysis and forecasts.</p>
+                <a href="ETH/index.html">View Details</a>
+            </div>
+            <div class="card">
+                <h2>SOL</h2>
+                <p>Solana prediction metrics and analysis.</p>
+                <a href="SOL/index.html">View Details</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2025 Crypto Forecasts. All rights reserved.</p>
+    </footer>
+</body>
+</html>
