Update ETH forecast - 2025-02-14

--- a/ETH/index.html
+++ b/ETH/index.html
@@ -22,7 +22,7 @@
         <div class="latest-forecast-card">
             <div class="forecast-header">
                 <h2>Latest Forecast</h2>
-                <div class="forecast-date">${FORECAST_DATE}</div>
+                <div class="forecast-date">2025-02-14</div>
             </div>
 
             <!-- Metrics Dashboard with placeholders -->
@@ -37,22 +37,22 @@
                 </div>
                 <div class="metric">
                     <div class="metric-label">Forecast Range</div>
-                    <div class="metric-value">${FORECAST_RANGE}</div>
+                    <div class="metric-value">$3676.06 - $4063.02</div>
                 </div>
                 <div class="metric">
                     <div class="metric-label">Uncertainty</div>
-                    <div class="metric-value">${FORECAST_UNCERTAINTY}</div>
+                    <div class="metric-value">±44.59%</div>
                 </div>
             </div>
 
             <!-- Probability Gauge -->
             <div class="forecast-gauge">
-                <span>Bearish (${BEARISH_PROBABILITY}%)</span>
+                <span>Bearish (38.70%)</span>
                 <div class="probability-bar">
-                    <div class="probability-fill" style="--probability: ${BULLISH_PROBABILITY}%"></div>
+                    <div class="probability-fill" style="--probability: 56.53%"></div>
                 </div>
-                <span>Bullish (${BULLISH_PROBABILITY}%)</span>
-                <div class="probability-value">56.48%</div>
+                <span>Bullish (56.53%)</span>
+                <div class="probability-value">56.53%</div>
             </div>
 
             <!-- Key Levels -->
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <a href="${FORECAST_DETAIL_LINK}" class="view-full-forecast">View Full Forecast Analysis →</a>
+            <a href="2025-02-14.html" class="view-full-forecast">View Full Forecast Analysis →</a>
         </div>
     </main>
 
