--- a/BNB/index.html
+++ b/BNB/index.html
@@ -1,78 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BNB (Binance Coin) Forecasts</title>
-    <style>
-        /* Existing styles from the original file */
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BNB (Binance Coin) Forecasts</title>
+  <style>
+    :root {
+      --primary-color: #2a2a2a;
+      --secondary-color: #4a90e2;
+      --background-color: #f5f5f5;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: var(--background-color);
+      color: var(--primary-color);
+    }
+
+    .crypto-header {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 2rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .crypto-symbol {
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
+
+    .crypto-name {
+      font-size: 1.5rem;
+      opacity: 0.9;
+    }
+
+    nav {
+      background-color: #333;
+      padding: 1rem;
+    }
+
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    nav a:hover {
+      background-color: var(--secondary-color);
+    }
+
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    .latest-forecast-card {
+      background: white;
+      border-radius: 8px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .forecast-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+
+    .forecast-date {
+      font-size: 1.2rem;
+      color: var(--secondary-color);
+    }
+
+    .metrics-dashboard {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .metric {
+      text-align: center;
+      padding: 1rem;
+      background: #f8f9fa;
+      border-radius: 8px;
+      transition: transform 0.3s;
+    }
+
+    .metric:hover {
+      transform: translateY(-2px);
+    }
+
+    .metric-label {
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+
+    .metric-value {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
+
+    .forecast-gauge {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 1rem 0;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .probability-bar {
+      height: 24px;
+      background: #f0f0f0;
+      border-radius: 12px;
+      overflow: hidden;
+      flex-grow: 1;
+      margin: 0 1rem;
+    }
+
+    .probability-fill {
+      height: 100%;
+      background: linear-gradient(90deg, #4CAF50, #2196F3);
+      width: var(--probability);
+      transition: width 1s ease-in-out;
+    }
+
+    .probability-value {
+      font-size: 1rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
+
+    .key-levels {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1rem;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .level {
+      text-align: center;
+      padding: 1rem;
+      background: #f8f9fa;
+      border-radius: 8px;
+      flex: 1;
+      margin: 0 0.5rem;
+      transition: transform 0.3s;
+    }
+
+    .level:hover {
+      transform: translateY(-2px);
+    }
+
+    .level-label {
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+
+    .level-value {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
+
+    .view-full-forecast {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: var(--secondary-color);
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    .view-full-forecast:hover {
+      background-color: #357abd;
+    }
+
+    footer {
+      background-color: var(--primary-color);
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+      
+      .key-levels {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .level {
+        margin: 0;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header class="crypto-header">
-        <div class="crypto-symbol">BNB</div>
-        <div class="crypto-name">Binance Coin</div>
-    </header>
+  <header class="crypto-header">
+    <div class="crypto-symbol">BNB</div>
+    <div class="crypto-name">Binance Coin</div>
+  </header>
 
-    <nav>
-        <!-- Existing navigation from the original file -->
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../AVAX/index.html">AVAX</a></li>
+      <li><a href="../BNB/index.html">BNB</a></li>
+      <li><a href="../BTC/index.html">BTC</a></li>
+      <li><a href="../ETH/index.html">ETH</a></li>
+      <li><a href="../SOL/index.html">SOL</a></li>
+    </ul>
+  </nav>
 
-    <main>
-        <div class="latest-forecast-card">
-            <div class="forecast-header">
-                <h2>Latest Forecast</h2>
-                <div class="forecast-date">2025-02-14</div>
-            </div>
+  <main>
+    <div class="latest-forecast-card">
+      <div class="forecast-header">
+        <h2>Latest Forecast</h2>
+        <div class="forecast-date">2025-02-14</div>
+      </div>
 
-            <!-- Metrics Dashboard with placeholders -->
-            <div class="metrics-dashboard">
-                <div class="metric">
-                    <div class="metric-label">Current Price</div>
-                    <div class="metric-value">$664.93</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">21-Day Forecast</div>
-                    <div class="metric-value">$750.95</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">Forecast Range</div>
-                    <div class="metric-value">$713.40 - $788.50</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">Uncertainty</div>
-                    <div class="metric-value">±12.94%</div>
-                </div>
-            </div>
-
-            <!-- Probability Gauge -->
-            <div class="forecast-gauge">
-                <span>Bearish (29.12%)</span>
-                <div class="probability-bar">
-                    <div class="probability-fill" style="--probability: 65.88%"></div>
-                </div>
-                <span>Bullish (65.88%)</span>
-                <div class="probability-value">65.88%</div>
-            </div>
-
-            <!-- Key Levels -->
-            <div class="key-levels">
-                <div class="level">
-                    <div class="level-label">Support</div>
-                    <div class="level-value">$553.97</div>
-                </div>
-                <div class="level">
-                    <div class="level-label">Resistance</div>
-                    <div class="level-value">$807.80</div>
-                </div>
-            </div>
-
-            <a href="2025-02-14.html" class="view-full-forecast">View Full Forecast Analysis →</a>
+      <!-- Metrics Dashboard -->
+      <div class="metrics-dashboard">
+        <div class="metric">
+          <div class="metric-label">Current Price</div>
+          <div class="metric-value">$664.93</div>
         </div>
-    </main>
+        <div class="metric">
+          <div class="metric-label">21-Day Forecast</div>
+          <div class="metric-value">$750.95</div>
+        </div>
+        <div class="metric">
+          <div class="metric-label">Forecast Range</div>
+          <div class="metric-value">$713.40 - $788.50</div>
+        </div>
+        <div class="metric">
+          <div class="metric-label">Uncertainty</div>
+          <div class="metric-value">±12.94%</div>
+        </div>
+      </div>
 
-    <footer>
-        <p>© 2025 Crypto Forecasts. All rights reserved.</p>
-    </footer>
+      <!-- Probability Gauge -->
+      <div class="forecast-gauge">
+        <span>Bearish (29.02%)</span>
+        <div class="probability-bar">
+          <div class="probability-fill" style="--probability: 65.95%"></div>
+        </div>
+        <span>Bullish (65.95%)</span>
+        <div class="probability-value">65.95%</div>
+      </div>
+
+      <!-- Key Levels -->
+      <div class="key-levels">
+        <div class="level">
+          <div class="level-label">Support</div>
+          <div class="level-value">$553.97</div>
+        </div>
+        <div class="level">
+          <div class="level-label">Resistance</div>
+          <div class="level-value">$807.80</div>
+        </div>
+      </div>
+
+      <a href="2025-02-14.html" class="view-full-forecast">
+        View Full Forecast Analysis →
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Crypto Forecasts. All rights reserved.</p>
+  </footer>
 </body>
 </html>
