Update BNB forecast - 2025-02-14

--- a/BNB/index.html
+++ b/BNB/index.html
@@ -66,7 +66,7 @@
       border-radius: 8px;
       padding: 2rem;
       margin-bottom: 2rem;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .forecast-header {
       display: flex;
@@ -86,7 +86,7 @@
       background: white;
       padding: 1.5rem;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .metric {
       text-align: center;
@@ -108,32 +108,45 @@
       font-weight: bold;
       color: var(--secondary-color);
     }
-    /* Stacked Probability Gauge */
-    .stacked-gauge {
-      width: 100%;
-      height: 200px; /* Adjust as needed */
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      overflow: hidden;
+    /* Stacked Bar Chart for Probabilities */
+    .stacked-bars {
       display: flex;
       flex-direction: column;
+      gap: 10px;
+      margin: 1rem 0;
     }
-    .stacked-gauge .segment {
+    .bar {
+      background-color: #ccc;
+      height: 30px;
+      border-radius: 4px;
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
       font-weight: bold;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     }
-    .segment.bullish {
+    .bar.bullish {
       background-color: #4CAF50;
     }
-    .segment.bearish {
+    .bar.bearish {
       background-color: #ff4d4d;
     }
-    .segment.neutral {
+    .bar.neutral {
       background-color: #ffa500;
+    }
+    .view-full-forecast {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: var(--secondary-color);
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+    .view-full-forecast:hover {
+      background-color: #357abd;
     }
     .key-levels {
       display: flex;
@@ -142,7 +155,7 @@
       padding: 1.5rem;
       background: white;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .level {
       text-align: center;
@@ -165,19 +178,6 @@
       font-size: 1.4rem;
       font-weight: bold;
       color: var(--secondary-color);
-    }
-    .view-full-forecast {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: var(--secondary-color);
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      transition: background-color 0.3s;
-    }
-    .view-full-forecast:hover {
-      background-color: #357abd;
     }
     footer {
       background-color: var(--primary-color);
@@ -222,6 +222,7 @@
         <h2>Latest Forecast</h2>
         <div class="forecast-date">2025-02-14</div>
       </div>
+      <!-- Metrics Dashboard -->
       <div class="metrics-dashboard">
         <div class="metric">
           <div class="metric-label">Current Price</div>
@@ -240,12 +241,13 @@
           <div class="metric-value">±12.94%</div>
         </div>
       </div>
-      <!-- Stacked Probability Gauge -->
-      <div class="stacked-gauge">
-        <div class="segment bullish" style="height: 66.10%;"><span>Bullish (66.10%)</span></div>
-        <div class="segment bearish" style="height: 28.81%;"><span>Bearish (28.81%)</span></div>
-        <div class="segment neutral" style="height: ${NEUTRAL_PROBABILITY}%;"><span>Neutral (${NEUTRAL_PROBABILITY}%)</span></div>
+      <!-- Stacked Bars for Probabilities -->
+      <div class="stacked-bars">
+        <div class="bar bullish" style="width: 65.83%;">Bullish (65.83%)</div>
+        <div class="bar bearish" style="width: 29.18%;">Bearish (29.18%)</div>
+        <div class="bar neutral" style="width: ${NEUTRAL_PROBABILITY}%;">Neutral (${NEUTRAL_PROBABILITY}%)</div>
       </div>
+      <!-- Key Levels -->
       <div class="key-levels">
         <div class="level">
           <div class="level-label">Support</div>
